# src/OpenApi.php
@@ -70,8 +70,7 @@ use OpenApi\Attributes as OA;
                         OutputTransformerInterface::KEY_WIND_DIRECTION => 'NE',
                         OutputTransformerInterface::KEY_WIND_DIRECTION_DEGREES => 40,
                         OutputTransformerInterface::KEY_TYPE => 1,
-                        OutputTransformerInterface::KEY_TYPE_STRING => 'Sunny day',
-                        OutputTransformerInterface::KEY_TYPE_EMOJI => '☀️',
+                        OutputTransformerInterface::KEY_TYPE_NAME => 'SUNNY_DAY',
                     ],
                     ResponseInterface::RESPONSE_API_KEY_SUCCESS => true,
                     ResponseInterface::RESPONSE_API_KEY_TIMESTAMP_ISO8601 => '2026-07-20T18:19:48+00:00',
